get doctors implemented
