# main.go
@@ -54,6 +54,7 @@ func main() {
 		api.POST("/book/appointment", entity.BookAppoitment).Use(database.Authentication)
 		api.GET("/appointments", entity.GetAppointments).Use(database.Authentication)
 		api.PUT("/appointment/:id", entity.UpdateAppointment).Use(database.Authentication)
+		api.GET("/doctors", entity.GetDoctors)
 
 	}
 
